--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,13 @@
 # Mono auto generated files
 mono_crash.*
 
+# Temp directory @hattabith	
+[Tt]emp/
+
+#Excel @hattabith
+*.xls
+*.xlsx
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -26,11 +33,9 @@ x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
-[Aa][Rr][Mm]64[Ee][Cc]/
 bld/
 [Bb]in/
 [Oo]bj/
-[Oo]ut/
 [Ll]og/
 [Ll]ogs/
 
@@ -84,8 +89,6 @@ StyleCopReport.xml
 *.pgc
 *.pgd
 *.rsp
-# but not Directory.Build.rsp, as it configures directory-level build defaults
-!Directory.Build.rsp
 *.sbr
 *.tlb
 *.tli
@@ -157,7 +160,6 @@ coverage*.info
 
 # NCrunch
 _NCrunch_*
-.NCrunch_*
 .*crunch*.local.xml
 nCrunchTemp_*
 
@@ -357,9 +359,6 @@ ASALocalRun/
 # MSBuild Binary and Structured Log
 *.binlog
 
-# AWS SAM Build and Temporary Artifacts folder
-.aws-sam
-
 # NVidia Nsight GPU debugger configuration file
 *.nvuser
 
@@ -404,3 +403,66 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+.Rproj.user
+
+
+
+
+
+
+# -------------------------------------------------------
+# -------------------------------------------------------
+
+# R Studio .gitignore part
+# from https://github.com/github/gitignore/blob/main/R.gitignore
+
+
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+.RDataTmp
+
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# pkgdown site
+docs/
+
+# translation temp files
+po/*~
+
+# RStudio Connect folder
+rsconnect/
